Hourly scheduled redeploy d5d3a66f258f30cb5731f75ccbb712d08f243bda

--- a/manual/alerts/goreplay.html
+++ b/manual/alerts/goreplay.html
@@ -10,7 +10,7 @@
     <meta charset="utf-8">
     <meta name="viewport" content="width=device-width, initial-scale=1, viewport-fit=cover">
 
-    <title>GoReplay - GOV.UK Developer Documentation</title>
+    <title>GoReplay (Traffic replay) - GOV.UK Developer Documentation</title>
 
     <link href="/stylesheets/manifest.css" rel="stylesheet" />
 
@@ -19,12 +19,12 @@
       <meta name="twitter:card" content="summary" />
       <meta name="twitter:domain" content="docs.publishing.service.gov.uk" />
       <meta name="twitter:image" content="https://docs.publishing.service.gov.uk/images/govuk-large.png" />
-      <meta name="twitter:title" content="GoReplay - GOV.UK Developer Documentation" />
+      <meta name="twitter:title" content="GoReplay (Traffic replay) - GOV.UK Developer Documentation" />
       <meta name="twitter:url" content="https://docs.publishing.service.gov.uk/manual/alerts/goreplay.html" />
 
       <meta property="og:image" content="https://docs.publishing.service.gov.uk/images/govuk-large.png" />
       <meta property="og:site_name" content="GOV.UK Developer Documentation" />
-      <meta property="og:title" content="GoReplay" />
+      <meta property="og:title" content="GoReplay (Traffic replay)" />
       <meta property="og:type" content="object" />
       <meta property="og:url" content="https://docs.publishing.service.gov.uk/manual/alerts/goreplay.html" />
 
@@ -131,7 +131,7 @@
                   <a href='/manual.html' class="toc__back-link govuk-link">&lsaquo; Manual</a>
   <ul>
   <li>
-    <a href="#header"><span>GoReplay</span></a>
+    <a href="#header"><span>GoReplay (Traffic replay)</span></a>
     <ul>
       <li>
         <a href="#goreplay-during-the-data-sync"><span>GoReplay during the data sync</span></a>
@@ -161,10 +161,10 @@
 
      <div class="govuk-!-font-size-16 govuk-!-margin-top-6">
 
-  Last updated: <a href="https://github.com/alphagov/govuk-developer-docs/commit/1a6b3af90040af98f23ec79b0770c521211bfb93">24 Mar 2021</a>
+  Last updated: <a href="https://github.com/alphagov/govuk-developer-docs/commit/c7f40ca5aeed6c129603e98259df12beaa763360">29 Apr 2021</a>
 </div>
 
- <h1 id='header'>GoReplay</h1> <p><a href="https://github.com/buger/goreplay/">GoReplay</a> (previously <a href="https://github.com/buger/goreplay/commit/74225ebb2236a46fd18a8fa4fa7de441497c13c4">&ldquo;gor&rdquo;</a>) is an open source tool we use
+ <h1 id='header'>GoReplay (Traffic replay)</h1> <p><a href="https://github.com/buger/goreplay/">GoReplay</a> (previously <a href="https://github.com/buger/goreplay/commit/74225ebb2236a46fd18a8fa4fa7de441497c13c4">&ldquo;gor&rdquo;</a>) is an open source tool we use
 to replay HTTP traffic from production to staging to give us greater confidence that
 our deploys are ok.</p>
 <p>When users make <a href="https://github.com/alphagov/govuk-puppet/blob/master/modules/router/manifests/gor.pp#L55"><code>GET</code>, <code>HEAD</code>, or <code>OPTIONS</code></a> requests on production,
@@ -208,7 +208,7 @@ them back in icinga.</p>
           <aside>
               <ul class="contribution-banner">
                 <li><a href="https://github.com/alphagov/govuk-developer-docs/blob/master/source/manual/alerts/goreplay.html.md">View source</a></li>
-                <li><a href="https://github.com/alphagov/govuk-developer-docs/issues/new?labels=bug&amp;title=Re:%20'GoReplay'&amp;body=Problem%20with%20'GoReplay'%20(https://docs.publishing.service.gov.uk/manual/alerts/goreplay.html)">Report problem</a></li>
+                <li><a href="https://github.com/alphagov/govuk-developer-docs/issues/new?labels=bug&amp;title=Re:%20'GoReplay%20(Traffic%20replay)'&amp;body=Problem%20with%20'GoReplay%20(Traffic%20replay)'%20(https://docs.publishing.service.gov.uk/manual/alerts/goreplay.html)">Report problem</a></li>
                 <li><a href="https://github.com/alphagov/govuk-developer-docs">GitHub Repo</a></li>
               </ul>
           </aside>
