--- a/document-types/external_content.html
+++ b/document-types/external_content.html
@@ -359,16 +359,16 @@ actually any pages with this document type.</p>
         </table>
       </div><h2 id='example-pages'>Example pages</h2>
 <ul>
+<li><a href="https://www.gov.ukhttp//www.chichester.gov.uk">Chichester District Council</a></li>
+<li><a href="https://www.gov.ukhttp//www.birmingham.gov.uk">Birmingham City Council</a></li>
+<li><a href="https://www.gov.ukhttps//www.organdonation.nhs.uk/">Organ donation</a></li>
 <li><a href="https://www.gov.ukhttp//www.telford.gov.uk">Telford &amp; Wrekin Council</a></li>
-<li><a href="https://www.gov.ukhttp//www.chorley.gov.uk">Chorley Borough Council</a></li>
-<li><a href="https://www.gov.ukhttp//www.pembrokeshire.gov.uk">Pembrokeshire County Council</a></li>
-<li><a href="https://www.gov.ukhttp//www.shetland.gov.uk">Shetland Islands Council</a></li>
-<li><a href="https://www.gov.ukhttp//www.iwight.com">Isle of Wight Council</a></li>
-<li><a href="https://www.gov.ukhttp//www.oxfordshire.gov.uk/">Oxfordshire County Council</a></li>
-<li><a href="https://www.gov.ukhttps//gov.wales/covid-19-alert-levels">Coronavirus (COVID-19) alert levels in Wales - GOV.WALES</a></li>
-<li><a href="https://www.gov.ukhttp//www.havant.gov.uk">Havant Borough Council</a></li>
-<li><a href="https://www.gov.ukhttp//www.crawley.gov.uk">Crawley Borough Council</a></li>
-<li><a href="https://www.gov.ukhttp//www.highpeak.gov.uk">High Peak Borough Council</a></li>
+<li><a href="https://www.gov.ukhttps//www.lewes-eastbourne.gov.uk">Lewes District Council</a></li>
+<li><a href="https://www.gov.ukhttp//www.tewkesburybc.gov.uk">Tewkesbury Borough Council</a></li>
+<li><a href="https://www.gov.ukhttp//www.aylesburyvaledc.gov.uk/">Aylesbury Vale District Council</a></li>
+<li><a href="https://www.gov.ukhttp//www.bolton.gov.uk">Bolton Metropolitan Borough Council</a></li>
+<li><a href="https://www.gov.ukhttp//www.rbkc.gov.uk/">Royal Borough of Kensington and Chelsea Council</a></li>
+<li><a href="https://www.gov.ukhttp//www.west-norfolk.gov.uk">King&rsquo;s Lynn and West Norfolk Borough Council</a></li>
 </ul>
 <p><a href="https://www.gov.uk/api/search.json?filter_content_store_document_type=external_content&amp;count=10">Source query from Search API</a></p>
 
