--- a/document-types/news_article.html
+++ b/document-types/news_article.html
@@ -361,16 +361,16 @@
         </table>
       </div><h2 id='example-pages'>Example pages</h2>
 <ul>
-<li><a href="https://www.gov.uk/government/world-location-news/269252.pt">Britânicos participam da maior feira ferrovária da América Latina</a></li>
-<li><a href="https://www.gov.uk/government/world-location-news/uk-visa-applicant-arrested-for-fraud--2">UK Visa Applicant Arrested for Fraud</a></li>
-<li><a href="https://www.gov.uk/government/world-location-news/210510.zh-tw">英國慶祝世界人權日 讚許台灣人權發展</a></li>
-<li><a href="https://www.gov.uk/government/world-location-news/209598.it">Presentazione di “A guide for the critical anti-racket consumer”</a></li>
-<li><a href="https://www.gov.uk/government/world-location-news/belizean-military-top-brass-visit-united-kingdom">Belizean military top brass visit United Kingdom</a></li>
-<li><a href="https://www.gov.uk/government/world-location-news/turks-and-caicos-post-cabinet-meeting-statement--7">TURKS AND CAICOS POST CABINET MEETING STATEMENT</a></li>
-<li><a href="https://www.gov.uk/government/world-location-news/192253.he">סגן שר החוץ הבריטי מגנה את רצח החיילים הישראלים</a></li>
-<li><a href="https://www.gov.uk/government/world-location-news/turks-and-caicos-post-cabinet-meeting-statement--32">Turks and Caicos Islands post Cabinet meeting statement</a></li>
-<li><a href="https://www.gov.uk/government/world-location-news/285657.pt">#INFRASTRUCTUREisGREAT</a></li>
-<li><a href="https://www.gov.uk/government/world-location-news/turks-and-caicos-post-cabinet-statement--3">Turks and Caicos post Cabinet Statement</a></li>
+<li><a href="https://www.gov.uk/government/world-location-news/238911.pt">Conferência sobre Eficiência Energética em Belo Horizonte</a></li>
+<li><a href="https://www.gov.uk/government/world-location-news/228522.es">David Muñoz y Simon Manley mano a mano en los fogones</a></li>
+<li><a href="https://www.gov.uk/government/world-location-news/uk-delegation-announces-its-2013-industry-day-the-future-of-nato-business--2">UK Delegation announces its 2013 Industry Day: The Future of NATO Business</a></li>
+<li><a href="https://www.gov.uk/government/world-location-news/190265.ja">RADIEX 2013 に英国が出展</a></li>
+<li><a href="https://www.gov.uk/government/world-location-news/192676.pt">São Paulo e Rio recebem a maior feira de educação britânica já organizada no país</a></li>
+<li><a href="https://www.gov.uk/government/world-location-news/advice-for-british-nationals-in-kolkata--32">Advice for British nationals in Kolkata</a></li>
+<li><a href="https://www.gov.uk/government/world-location-news/224845.es-419">La consulta en Crimea</a></li>
+<li><a href="https://www.gov.uk/government/world-location-news/192707.es-419">El Reino Unido presente en la Cumbre Aerospacial México 2013</a></li>
+<li><a href="https://www.gov.uk/government/world-location-news/the-human-rights-and-democracy-fund-bid-round-2014-2015--2">The Human Rights and Democracy Fund - Bid Round 2014-2015</a></li>
+<li><a href="https://www.gov.uk/government/world-location-news/embassy-closure--3">Embassy closure</a></li>
 </ul>
 <p><a href="https://www.gov.uk/api/search.json?filter_content_store_document_type=news_article&amp;count=10">Source query from Search API</a></p>
 
