--- a/document-types/news_article.html
+++ b/document-types/news_article.html
@@ -361,16 +361,16 @@
         </table>
       </div><h2 id='example-pages'>Example pages</h2>
 <ul>
-<li><a href="https://www.gov.uk/government/world-location-news/238911.pt">Conferência sobre Eficiência Energética em Belo Horizonte</a></li>
-<li><a href="https://www.gov.uk/government/world-location-news/228522.es">David Muñoz y Simon Manley mano a mano en los fogones</a></li>
+<li><a href="https://www.gov.uk/government/world-location-news/--8">英國貿易投資署和英國智慧財產權官員協助蘇格蘭威士忌協會打擊中國侵權，成功捍衛蘇格蘭原產地地理標示資格</a></li>
+<li><a href="https://www.gov.uk/government/world-location-news/changes-to-the-uk-visa-application-process-in-czech-republic--2">Changes to the UK Visa Application Process in Czech Republic</a></li>
+<li><a href="https://www.gov.uk/government/world-location-news/212474.ja">G8認知症サミットが開催されました</a></li>
+<li><a href="https://www.gov.uk/government/world-location-news/171845.es-419">G8: Oportunidades para todos, incluyendo Guatemala</a></li>
+<li><a href="https://www.gov.uk/government/world-location-news/220750.zh-tw">英國氣候變遷特別代表來台訪問</a></li>
+<li><a href="https://www.gov.uk/government/world-location-news/246679.es-419">Aviation security update</a></li>
 <li><a href="https://www.gov.uk/government/world-location-news/uk-delegation-announces-its-2013-industry-day-the-future-of-nato-business--2">UK Delegation announces its 2013 Industry Day: The Future of NATO Business</a></li>
 <li><a href="https://www.gov.uk/government/world-location-news/190265.ja">RADIEX 2013 に英国が出展</a></li>
 <li><a href="https://www.gov.uk/government/world-location-news/192676.pt">São Paulo e Rio recebem a maior feira de educação britânica já organizada no país</a></li>
 <li><a href="https://www.gov.uk/government/world-location-news/advice-for-british-nationals-in-kolkata--32">Advice for British nationals in Kolkata</a></li>
-<li><a href="https://www.gov.uk/government/world-location-news/224845.es-419">La consulta en Crimea</a></li>
-<li><a href="https://www.gov.uk/government/world-location-news/192707.es-419">El Reino Unido presente en la Cumbre Aerospacial México 2013</a></li>
-<li><a href="https://www.gov.uk/government/world-location-news/the-human-rights-and-democracy-fund-bid-round-2014-2015--2">The Human Rights and Democracy Fund - Bid Round 2014-2015</a></li>
-<li><a href="https://www.gov.uk/government/world-location-news/embassy-closure--3">Embassy closure</a></li>
 </ul>
 <p><a href="https://www.gov.uk/api/search.json?filter_content_store_document_type=news_article&amp;count=10">Source query from Search API</a></p>
 
