--- a/manual/review-page.html
+++ b/manual/review-page.html
@@ -160,6 +160,13 @@
           <main id="content" class="technical-documentation" data-module="anchored-headings">
             
   <p><a href='/manual.html#documentation'>Documentation</a></p>   <div class="govuk-!-font-size-16 govuk-!-margin-top-6">
+    <div class="govuk-warning-text">
+      <span class="govuk-warning-text__icon" aria-hidden="true">!</span>
+      <strong class="govuk-warning-text__text">
+        <span class="govuk-warning-text__assistive">Warning</span>
+        This document has not been updated for a while now. It may be out of date.
+      </strong>
+    </div>
 
   Last updated: <a href="https://github.com/alphagov/govuk-developer-docs/commit/77e11550b1ad4bfef5d6f201b3e29b6e068e172e">29 Oct 2020</a>
 </div>
