Hourly scheduled redeploy 6dcf65424f74be1b53551713711da4d341fbd9a7

--- a/apps/mapit.html
+++ b/apps/mapit.html
@@ -421,7 +421,7 @@
 
 <p>This is a fork of <a href="https://github.com/mysociety/mapit">the MapIt repo</a>. MapIt is a Python/Django application (backed by PostgreSQL), that provides RESTful API for looking up postcodes, council boundaries, etc.</p>
 
-<p><strong>Avoid adding features, changing behaviours, or touching the code of MapIt itself</strong>. The only <a href="https://github.com/mysociety/mapit/compare/master...alphagov:master">differences against the original repo</a> should only be to help integrate it into the GOV.UK stack. So far this includes:</p>
+<p><strong>Avoid adding features, changing behaviours, or touching the code of MapIt itself</strong>. The only <a href="https://github.com/mysociety/mapit/compare/master...alphagov:main">differences against the original repo</a> should only be to help integrate it into the GOV.UK stack. So far this includes:</p>
 
 <ul>
 <li>
