--- a/document-types/news_article.html
+++ b/document-types/news_article.html
@@ -361,16 +361,16 @@
         </table>
       </div><h2 id='example-pages'>Example pages</h2>
 <ul>
-<li><a href="https://www.gov.uk/government/world-location-news/254304.es-419">Especialistas ingleses del College of Policing entrenan personal del ECU 911 - Ecuador</a></li>
-<li><a href="https://www.gov.uk/government/world-location-news/260563.pt">Missão Britânica já apoiou 500 empresas do Reino Unido em negócios no Brasil</a></li>
-<li><a href="https://www.gov.uk/government/world-location-news/212474.ja">G8認知症サミットが開催されました</a></li>
-<li><a href="https://www.gov.uk/government/world-location-news/286926.zh">英國更換簽證語言測驗機構</a></li>
-<li><a href="https://www.gov.uk/government/world-location-news/192676.pt">São Paulo e Rio recebem a maior feira de educação britânica já organizada no país</a></li>
-<li><a href="https://www.gov.uk/government/world-location-news/246679.es-419">Aviation security update</a></li>
-<li><a href="https://www.gov.uk/government/world-location-news/--8">英國貿易投資署和英國智慧財產權官員協助蘇格蘭威士忌協會打擊中國侵權，成功捍衛蘇格蘭原產地地理標示資格</a></li>
-<li><a href="https://www.gov.uk/government/world-location-news/applications-for-201415-chevening-scholarships-are-now-open--2">Applications for 2014/15 Chevening Scholarships in Lebanon Open</a></li>
-<li><a href="https://www.gov.uk/government/world-location-news/spain-emerges-as-number-1-destination-for-britons-wanting-expert-property-buying-advice--3">Spain is number 1 country for which Britons want property advice</a></li>
-<li><a href="https://www.gov.uk/government/world-location-news/turks-and-caicos-islands-cabinet-update-and-actions--4">Turks and Caicos Islands Cabinet update and actions</a></li>
+<li><a href="https://www.gov.uk/government/world-location-news/173029.lt">Lietuvos kariai tarnaus JK vadovaujamoje ES kovinėje grupėje</a></li>
+<li><a href="https://www.gov.uk/government/world-location-news/188434.lt">JK bus surengtas G8 šalių susitikimas demencijos klausimais</a></li>
+<li><a href="https://www.gov.uk/government/world-location-news/171850.es-419">G8: Oportunidades para todos, incluyendo Honduras</a></li>
+<li><a href="https://www.gov.uk/government/world-location-news/celebrating-three-great-english-exports-in-2015--5">Celebrating three great English exports in 2015</a></li>
+<li><a href="https://www.gov.uk/government/world-location-news/welcome-to-our-new-website-gov-uk">Welcome to our new website - GOV.UK</a></li>
+<li><a href="https://www.gov.uk/government/world-location-news/solomon-islands-humanitarian-aid-for-tsunami-hit-islanders">Solomon Islands: Humanitarian aid for tsunami-hit islanders</a></li>
+<li><a href="https://www.gov.uk/government/world-location-news/209252.pt">Tecnologias para Grandes Eventos é tema de Seminário GREAT em SP</a></li>
+<li><a href="https://www.gov.uk/government/world-location-news/paris-saint-germain-v-chelsea-travel-advice--2">Paris Saint-Germain v Chelsea travel advice</a></li>
+<li><a href="https://www.gov.uk/government/world-location-news/office-closure--3">Office Closure</a></li>
+<li><a href="https://www.gov.uk/government/world-location-news/consular-notice-about-demonstrations-in-kuwait--3">Consular notice about demonstrations in Kuwait</a></li>
 </ul>
 <p><a href="https://www.gov.uk/api/search.json?filter_content_store_document_type=news_article&amp;count=10">Source query from Search API</a></p>
 
