--- a/document-types/news_article.html
+++ b/document-types/news_article.html
@@ -361,16 +361,16 @@
         </table>
       </div><h2 id='example-pages'>Example pages</h2>
 <ul>
-<li><a href="https://www.gov.uk/government/world-location-news/247699.lt">Kartu esame stipresni: būtina stiprinti stabilumą pasaulyje</a></li>
-<li><a href="https://www.gov.uk/government/world-location-news/climate-change-energy-and-programme-team-in-mexico-city--2">Climate Change, Energy and Programme Team in Mexico City</a></li>
-<li><a href="https://www.gov.uk/government/world-location-news/six-monthly-report-to-parliament-on-hong-kong--2">Six Monthly Report to Parliament on Hong Kong</a></li>
-<li><a href="https://www.gov.uk/government/world-location-news/british-embassy-in-cairo-closed-to-the-public--4">British Embassy in Cairo closed to the public</a></li>
-<li><a href="https://www.gov.uk/government/world-location-news/migrant-health-surcharge-to-raise-200-million-a-year">Migrant &lsquo;health surcharge&rsquo; to raise £200 million a year</a></li>
-<li><a href="https://www.gov.uk/government/world-location-news/224623.es-419">Concurso &ldquo;Inauguración Testino&rdquo; en Argentina</a></li>
-<li><a href="https://www.gov.uk/government/world-location-news/263031.es-419">Términos y condiciones del concurso #MusicIsGREAT</a></li>
-<li><a href="https://www.gov.uk/government/world-location-news/213614.es-419">Embajador Benjamin designado Alto Comisionado en Ghana</a></li>
-<li><a href="https://www.gov.uk/government/world-location-news/240429.pt">COMUNICADO AOS INSCRITOS NO WORSHOP &ldquo;ARTE DA CERVEJA BRITÂNICA&rdquo;</a></li>
-<li><a href="https://www.gov.uk/government/world-location-news/277623.zh-tw">簽證中心聖誕節與新年假期閉館時間</a></li>
+<li><a href="https://www.gov.uk/government/world-location-news/224845.es-419">La consulta en Crimea</a></li>
+<li><a href="https://www.gov.uk/government/world-location-news/246679.es-419">Aviation security update</a></li>
+<li><a href="https://www.gov.uk/government/world-location-news/changes-to-the-uk-visa-application-process-in-czech-republic--2">Changes to the UK Visa Application Process in Czech Republic</a></li>
+<li><a href="https://www.gov.uk/government/world-location-news/248692.ko">주한영국대사관, 한국인 20 여명에게 영국 정부 쉐브닝 장학금 전달</a></li>
+<li><a href="https://www.gov.uk/government/world-location-news/jeremy-hunt-meets-japanese-pm-amid-life-sciences-week">Jeremy Hunt meets Japanese PM amid Life Sciences Week </a></li>
+<li><a href="https://www.gov.uk/government/world-location-news/internship-opportunity-at-the-british-embassy-in-lima--4">Internship opportunity at the British Embassy in Lima</a></li>
+<li><a href="https://www.gov.uk/government/world-location-news/297977.pt">HANGOUT #UKINBRAZIL</a></li>
+<li><a href="https://www.gov.uk/government/world-location-news/269052.es-419">Referentes locales compartieron sus experiencias sobre liderazgo en las Chevening TALKS</a></li>
+<li><a href="https://www.gov.uk/government/world-location-news/260563.pt">Missão Britânica já apoiou 500 empresas do Reino Unido em negócios no Brasil</a></li>
+<li><a href="https://www.gov.uk/government/world-location-news/212474.ja">G8認知症サミットが開催されました</a></li>
 </ul>
 <p><a href="https://www.gov.uk/api/search.json?filter_content_store_document_type=news_article&amp;count=10">Source query from Search API</a></p>
 
