--- a/document-types/place.html
+++ b/document-types/place.html
@@ -368,7 +368,7 @@
 <li><a href="https://www.gov.uk/id-scan-eu-settlement-scheme">Where to scan your ID document for the EU Settlement Scheme</a></li>
 <li><a href="https://www.gov.uk/find-regional-passport-office">Find a passport office for your Fast Track or Premium appointment</a></li>
 <li><a href="https://www.gov.uk/health-protection-team">Find your local health protection team in England</a></li>
-<li><a href="https://www.gov.uk/disabled-students-allowances-assessment-centre">Find a Disabled Students&rsquo; Allowances assessment centre</a></li>
+<li><a href="https://www.gov.uk/disabled-students-allowances-assessment-centre">Find a Disabled Students&rsquo; Allowance assessment centre</a></li>
 <li><a href="https://www.gov.uk/report-child-abuse-to-local-council">Report child abuse to a local council</a></li>
 <li><a href="https://www.gov.uk/find-vehicle-scrapyard">Find a vehicle scrapyard</a></li>
 </ul>
