Hourly scheduled redeploy 6dcf65424f74be1b53551713711da4d341fbd9a7

--- a/document-types/external_content.html
+++ b/document-types/external_content.html
@@ -359,16 +359,16 @@ actually any pages with this document type.</p>
         </table>
       </div><h2 id='example-pages'>Example pages</h2>
 <ul>
-<li><a href="https://www.gov.ukhttp//www.inverclyde.gov.uk">Inverclyde Council</a></li>
-<li><a href="https://www.gov.ukhttp//www.broadland.gov.uk">Broadland District Council</a></li>
-<li><a href="https://www.gov.ukhttp//www.banbridge.com/">Banbridge District Council</a></li>
-<li><a href="https://www.gov.ukhttp//www.hants.gov.uk">Hampshire County Council</a></li>
-<li><a href="https://www.gov.ukhttp//www.islington.gov.uk/">London Borough of Islington Council</a></li>
-<li><a href="https://www.gov.ukhttp//www.oldham.gov.uk/">Oldham Metropolitan Borough Council</a></li>
 <li><a href="https://www.gov.ukhttp//www.iwight.com">Isle of Wight Council</a></li>
+<li><a href="https://www.gov.ukhttp//www.oxfordshire.gov.uk/">Oxfordshire County Council</a></li>
 <li><a href="https://www.gov.ukhttps//gov.wales/covid-19-alert-levels">Coronavirus (COVID-19) alert levels in Wales - GOV.WALES</a></li>
 <li><a href="https://www.gov.ukhttp//www.preston.gov.uk">Preston City Council</a></li>
-<li><a href="https://www.gov.ukhttp//www.richmondshire.gov.uk">Richmondshire District Council</a></li>
+<li><a href="https://www.gov.ukhttp//www.oldham.gov.uk/">Oldham Metropolitan Borough Council</a></li>
+<li><a href="https://www.gov.ukhttp//www.islington.gov.uk/">London Borough of Islington Council</a></li>
+<li><a href="https://www.gov.ukhttps//nationalcareersservice.direct.gov.uk/advice/getajob/cvs/">Write your CV - National Careers Service</a></li>
+<li><a href="https://www.gov.ukhttp//www.dorsetforyou.com/weymouthandportland">Weymouth and Portland Borough Council</a></li>
+<li><a href="https://www.gov.ukhttp//www.bolton.gov.uk">Bolton Metropolitan Borough Council</a></li>
+<li><a href="https://www.gov.ukhttp//www.barnet.gov.uk/">London Borough of Barnet Council</a></li>
 </ul>
 <p><a href="https://www.gov.uk/api/search.json?filter_content_store_document_type=external_content&amp;count=10">Source query from Search API</a></p>
 
