Hourly scheduled redeploy 6dcf65424f74be1b53551713711da4d341fbd9a7

--- a/document-types/external_content.html
+++ b/document-types/external_content.html
@@ -359,16 +359,16 @@ actually any pages with this document type.</p>
         </table>
       </div><h2 id='example-pages'>Example pages</h2>
 <ul>
-<li><a href="https://www.gov.ukhttp//www.banbridge.com/">Banbridge District Council</a></li>
-<li><a href="https://www.gov.ukhttp//www.highpeak.gov.uk">High Peak Borough Council</a></li>
-<li><a href="https://www.gov.ukhttp//www.chichester.gov.uk">Chichester District Council</a></li>
 <li><a href="https://www.gov.ukhttps//nationalcareersservice.direct.gov.uk/advice/getajob/cvs/">Write your CV - National Careers Service</a></li>
-<li><a href="https://www.gov.ukhttp//www.lancashire.gov.uk/">Lancashire County Council</a></li>
-<li><a href="https://www.gov.ukhttp//www.preston.gov.uk">Preston City Council</a></li>
-<li><a href="https://www.gov.ukhttp//www.gravesham.gov.uk">Gravesham Borough Council</a></li>
-<li><a href="https://www.gov.ukhttp//www.oldham.gov.uk/">Oldham Metropolitan Borough Council</a></li>
-<li><a href="https://www.gov.ukhttp//www.castlereagh.gov.uk">Castlereagh Borough Council</a></li>
-<li><a href="https://www.gov.ukhttp//www.dover.gov.uk">Dover District Council</a></li>
+<li><a href="https://www.gov.ukhttp//www.dorsetforyou.com/weymouthandportland">Weymouth and Portland Borough Council</a></li>
+<li><a href="https://www.gov.ukhttp//www.rbkc.gov.uk/">Royal Borough of Kensington and Chelsea Council</a></li>
+<li><a href="https://www.gov.ukhttp//www.manchester.gov.uk">Manchester City Council</a></li>
+<li><a href="https://www.gov.ukhttp//www.richmond.gov.uk/">London Borough of Richmond upon Thames Council</a></li>
+<li><a href="https://www.gov.ukhttp//www.carmarthenshire.gov.uk">Carmarthenshire County Council</a></li>
+<li><a href="https://www.gov.ukhttps//www.malvernhills.gov.uk/">Malvern Hills District Council</a></li>
+<li><a href="https://www.gov.ukhttp//www.southtyneside.info/">South Tyneside Metropolitan Borough Council</a></li>
+<li><a href="https://www.gov.ukhttp//www.north-ayrshire.gov.uk">North Ayrshire Council</a></li>
+<li><a href="https://www.gov.ukhttp//www.mendip.gov.uk">Mendip District Council</a></li>
 </ul>
 <p><a href="https://www.gov.uk/api/search.json?filter_content_store_document_type=external_content&amp;count=10">Source query from Search API</a></p>
 
